crates/nash-parse/src/snapshots/nash_parse__type___tests__record_extension_multiple.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n{ a | name : String, age : Int }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 33,
        },
    },
    value: Record(
        [
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "name",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: Type(
                        Region {
                            start: Position {
                                line: 1,
                                column: 14,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        "String",
                        [],
                    ),
                },
            },
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 22,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    value: "age",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 28,
                        },
                        end: Position {
                            line: 1,
                            column: 31,
                        },
                    },
                    value: Type(
                        Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 31,
                            },
                        },
                        "Int",
                        [],
                    ),
                },
            },
        ],
        Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: "a",
            },
        ),
    ),
}
