crates/nash-parse/src/snapshots/nash_parse__type___tests__type_app_maybe.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nMaybe Int"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Type(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 6,
            },
        },
        "Maybe",
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Type(
                    Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    "Int",
                    [],
                ),
            },
        ],
    ),
}
